# vetta

./: .gitignore  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci-docs.yml  ci-python.yml  ci-rust.yml
_dev_scripts/: gen_test_audio_macos.sh
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  output.rs
apps/cli/src/commands/: earnings.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: earnings_processor.rs  lib.rs
crates/core/src/db/: config.rs  connection.rs  error.rs  mod.rs  models.rs  repositories.rs
crates/core/src/stt/: error.rs  local.rs
docs/: package-lock.json  package.json  rspress.config.ts
docs/content/: index.md
docs/content/architecture/: configuration.md  decisions.md  grpc-transport.md  monorepo.md  overview.md  python-service.md  stt-pipeline.md  stt-strategy.md
docs/content/configuration/: embeddings-service.md  index.md  stt-service.md
docs/content/guide/: introduction.md  quick-start.md  quick-start.mdx
docs/content/guide/first-run/: test-audio.mdx
docs/content/guide/installation/: cloud.md  linux.md  macos.md  prerequisites.mdx
docs/content/guide/mongodb/: atlas-cloud.md  local-atlas-cli.md  overview.md  self-hosted.md
docs/content/technical/: architecture.md  data-model.md  processing-pipeline.mdx
docs/guide/: introduction.md
infra/ec2/: init.sh
infra/terraform/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
proto/: chat.proto
proto/embeddings/: embeddings.proto
proto/llm/: llm.proto
proto/reranker/: reranker.proto
proto/speech/: speech.proto
rust/: Cargo.toml
rust/apps/cli/: Cargo.toml
rust/apps/cli/src/: cli.rs  config.rs  context.rs  main.rs
rust/apps/cli/src/commands/: config.rs  debug.rs  earnings.rs  mod.rs
rust/apps/cli/src/infra/: factory.rs
rust/apps/cli/src/ui/: mod.rs
rust/apps/cli/src/ui/earnings/: mod.rs  observer.rs  transcript.rs
rust/apps/migrate/: Cargo.toml
rust/apps/migrate/src/: main.rs
rust/crates/core/: Cargo.toml  build.rs
rust/crates/core/src/: lib.rs
rust/crates/core/src/common/: error.rs  mod.rs  uds_channel.rs
rust/crates/core/src/db/: error.rs  mod.rs  models.rs  repositories.rs
rust/crates/core/src/earnings/: errors.rs  events.rs  mod.rs  processor.rs  utils.rs
rust/crates/core/src/embeddings/: domain.rs  errors.rs  local.rs  mod.rs
rust/crates/core/src/reranker/: domain.rs  errors.rs  local.rs  mod.rs
rust/crates/core/src/stt/: domain.rs  error.rs  local.rs  mod.rs
rust/crates/core/src/vector_search/: mod.rs
services/stt/: .gitignore  config.toml  ec2.config.toml  pyproject.toml
services/stt/local/: Makefile  audio.py  diarization.py  main.py  pyproject.toml  servicer.py  settings.py
services/stt/local/tests/: conftest.py  test_integration.py  test_servicer.py  test_settings.py
services/stt/local/tests/fixtures/: minimal_config.toml  tcp_config.toml
services/stt/src/app/: embed_servicer.py  llm_servicer.py  main.py  reranker_servicer.py  stt_servicer.py
services/stt/src/core/: audio.py  settings.py
services/stt/src/diarization/: pipeline.py
services/stt/src/embeddings/: domain.py  engine.py
services/stt/src/llm/: domain.py  engine.py  prompt.py  qwen_prompt.txt  strategy_mlx.py  strategy_vllm.py
services/stt/src/reranker/: domain.py  engine.py
services/stt/src/stt/: domain.py  engine.py
services/vllm/: pyproject.toml
services/vllm/src/: server.py
