[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/cli"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["lnivva"]
license = "MIT"
description = "Institutional-grade financial analysis engine combining ASR (Whisper), vector embeddings, and semantic search for earnings call and 10-K analysis."

[workspace.dependencies]
# Internal
vetta_core = { path = "crates/core", version = "0.1.0" }

# External
clap = { version = "4.5.58", features = ["derive", "env"] }
infer = "0.19.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
miette = "7.6.0"
colored = "3.1.1"
tempfile = "3.17.1"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
async-trait = "0.1"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
prost = "0.13"
dotenvy = "0.15.7"
mongodb = { version = "3.5.1", features = ["bson-3"] }
textwrap = "0.16.2"
terminal_size = "0.4.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true