[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/cli",
    "apps/migrate"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["lnivva"]
license = "MIT"
description = "Institutional-grade financial analysis engine combining ASR (Whisper), vector embeddings, and semantic search for earnings call and 10-K analysis."

[workspace.dependencies]
# Internal
vetta_core = { path = "crates/core", version = "0.1.0" }

# External
clap = { version = "4.6.0", features = ["derive", "env"] }
infer = "0.19.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
miette = "7.6.0"
colored = "3.1.1"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
async-trait = "0.1"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
tonic = "0.14.5"
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
dotenvy = "0.15.7"
mongodb = { version = "3.5.2", features = ["bson-3"] }
textwrap = "0.16.2"
terminal_size = "0.4.3"
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
indicatif = "0.18.4"
console = "0.16.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
debug = true
