[package]
name = "vetta_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "vetta"
path = "src/main.rs"

[dependencies]
miette = { workspace = true, features = ["fancy"] }
vetta_core.workspace = true
colored.workspace = true
clap.workspace = true
tokio.workspace = true
dotenvy.workspace = true
textwrap.workspace = true
terminal_size.workspace = true