[project]
name = "ai-grpc-service"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "faster-whisper==1.2.1",
    "grpcio==1.80.0",
    "grpcio-tools==1.80.0",
    "psutil==7.2.2",
    "requests==2.33.1",
    "python-json-logger==4.1.0",
    "pyannote-audio==4.0.4",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "voyageai>=0.3.7",
    "torchcodec>=0.11.0",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    "nvidia-cudnn-cu12; sys_platform == 'linux'"
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "ruff==0.15.10",
    "types-grpcio>=1.0.0.20260408",
    "types-protobuf>=7.34.1.20260408",
    "types-psutil>=7.2.2.20260130",
    "types-requests>=2.33.0.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
files = ["src", "tests", "scripts"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "ctranslate2.*",
    "pyannote.*",
    "voyageai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.generated.*"]
ignore_errors = true