[package]
name = "vetta_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
infer.workspace = true
thiserror.workspace = true
serde.workspace = true
miette.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
tonic.workspace = true
tower.workspace = true
prost.workspace = true
hyper-util.workspace = true
mongodb.workspace = true
futures.workspace = true
tracing.workspace = true
tonic-prost.workspace = true
prost-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.5"