[project]
name = "whisper-stt-service"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "faster-whisper==1.1.0",
    "grpcio==1.68.0",
    "grpcio-tools==1.68.0",
    "psutil==6.1.0",
    "requests==2.32.5",
    "python-json-logger==4.0.0"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest==8.3.0",
    "pytest-mock==3.14.0",
    "ruff==0.15.2",
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=6.32.1.20251210",
    "types-psutil>=7.2.2.20260130",
    "types-requests>=2.32.4.20260107",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "ctranslate2.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["speech", "speech.*"]
ignore_errors = true